# ScatterAppend

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py
.github/workflows/: test.yml
scatter_append/: __init__.py  scatter_append.py
test/: test.py
