[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scatter-append"
version = "0.3"
description = "A utility for scatter appending to mutable sequences."
authors = [
  { name = "Rhys Newbury", email = "rhys.newbury@monash.edu" },
  { name = "Bryce Ferenczi", email = "bryce.ferenczi@monash.edu" }
]
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

# Optional: set your homepage (shown prominently on PyPI)
homepage = "https://github.com/rhys-newbury/ScatterAppend"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88